lab1/Test/L1-A-7-80.cmm
int I6mjUNoInR ( ) {
  int tMFKPgszSniwMhz4u5LE [ 1337858714 ] = T = _aG0 
    < fxkvQG3kPfSC2wcQ / URK4_elKfpkKplGY2Q ( GHad6KRlBjhxuHeOdHb3 
    , G0sL5_u34VcPA3QQ = LbrkQ || yftIbtIbHnXKARK && lQS3wtIawh 
    + G7mpvlNusvFrGIx0tWb0 / ! - TiSizd8ImIjywZgl [ lLP 
    == _7qfvCX4A3UG3FfDugN + ( E9kXPxXBGGzTJ = dOeepWNFuhA4Hw 
    > ! EQpMPLJo3XGmotZhLn [ qdTJUbV8sxwzFyI_ = A || qz61a9BIU 
    && TOpkozU <= ( PIekMWvCXUh1E || do27isxYJTWhoxN && 
    mzmka6PXT4NTMBgubS != vYY ) . jaP8L ] >= 177700061 
    . Yi1PVBdw4k - ! ajN371_ZYl ) . ybAGB0lkX3iwdtUD ] 
    :) * eTIHs2hu6F ( ) - ! - 1850501767.1755094798 ;
}
struct yli ;
float PQb8nkbUbS 
;
int E3FLlRE7x4v , uoBXvzjHhvc 

;
int bfpj ( int f9OFYdDo ) {
  return cF1Doq6Kf ;
}
int ;
int ;
int BgAJEVkE ( int yq25LVKGW7n073WZkZP , int gB ) 
  {
  if ( Fld2Jh_p7W6uBA_vEGKG )   CyXibCDDox ;
else   if ( YVv5oNkzfN427FisF )   if ( PmgJEtp )   zfkuJSiP4n67LCLn4 
    ;
else   while ( MEAwJegPm4KKAi @) {
    struct {
      struct {
        struct {
          int L50GRM ~;
          int X_omIcWs ;
          int lHa_Y7y ;
          struct {
          }ZTua5 ;
          struct DmxVHv_WqiAlRUU r_0Ky6ycw ;
          struct tkIa34tKvqX3a {
          }HXDhFQjwbu ;
          int T_rUWpYWUtaEvP ;
        }f4k ;
      }V ;
      struct pINl1q5IV2V DDxkhSQXSmntDeBT6ZnU ;
    }M ;
    int aROGbnsm77qOQz8U , U0Q ;
    NELuw0KC ;
  }



}
int ;
int %;
